--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
           <ul class="social-links">
             <li>
-              <a target="_blank" href="https://instagram.com/maykbrito"
+              <a target="_blank" href="https://instagram.com/nao_eo_lucas"
                 ><svg
                   width="24"
                   height="24"
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://facebook.com/maykbrito">
+              <a target="_blank" href="">
                 <svg
                   width="24"
                   height="24"
@@ -135,7 +135,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://youtube.com/maykbrito">
+              <a target="_blank" href="">
                 <svg
                   width="24"
                   height="24"
@@ -634,7 +634,7 @@
         <div class="col-b">
           <ul class="social-links">
             <li>
-              <a target="_blank" href="https://instagram.com/maykbrito"
+              <a target="_blank" href="https://instagram.com/nao_eo_lucas"
                 ><svg
                   width="24"
                   height="24"
@@ -667,7 +667,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://facebook.com/maykbrito">
+              <a target="_blank" href="">
                 <svg
                   width="24"
                   height="24"
@@ -686,7 +686,7 @@
               </a>
             </li>
             <li>
-              <a target="_blank" href="https://youtube.com/maykbrito">
+              <a target="_blank" href="">
                 <svg
                   width="24"
                   height="24"
